eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sakamichi-api-service
spec:
  selector:
    app: sakamichi-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
